# Politeia

./: .gitignore  CMakeLists.txt  README.md
examples/: CASES.md  adam_eve.cfg  adam_eve.csv  adam_eve_quick.cfg  carrying_cap_test.cfg  genesis_100k.cfg  genesis_100k_quicktest.cfg  genesis_hyde_100k.cfg  genesis_hyde_baseline.cfg  long_run.cfg  minimal_1k.cfg  multi_basins.cfg  river_valley.cfg  riverfield_global_snippet.cfg  scan_base.cfg  scan_polity.cfg  terrain_compare.cfg
scripts/: analyze_run.py  fetch_climate.py  fetch_rivers.py  fetch_terrain.py  generate_genesis.py  generate_pptx.py  generate_vibe_pptx.py  param_scan.py  plot_ablation.py  plot_distributions.py  plot_order_params.py  plot_phase_diagram.py  plot_polities.py  plot_scaling.py  plot_snapshot.py  plot_terrain.py  plot_terrain_compare.py  plot_timeseries.py  plot_worldmap.py  rule_scan.py  scaling_test.py  terrain_compare.py  validate_and_run.sh  visualize.py
src/: CMakeLists.txt  main.cpp
src/analysis/: network_analysis.cpp  network_analysis.hpp  order_params.cpp  order_params.hpp  perf_monitor.cpp  perf_monitor.hpp  phase_transition.cpp  phase_transition.hpp  polity.cpp  polity.hpp
src/climate/: climate_grid.cpp  climate_grid.hpp
src/core/: config.cpp  config.hpp  constants.hpp  particle_data.cpp  particle_data.hpp  types.hpp
src/domain/: cell_list.cpp  cell_list.hpp  decomposition.cpp  decomposition.hpp  morton.hpp  sfc_decomposition.cpp  sfc_decomposition.hpp
src/force/: social_force.cpp  social_force.hpp  terrain_force.cpp  terrain_force.hpp  terrain_loader.cpp  terrain_loader.hpp
src/integrator/: langevin_integrator.cpp  langevin_integrator.hpp
src/interaction/: culture_dynamics.cpp  culture_dynamics.hpp  loyalty.cpp  loyalty.hpp  resource_exchange.cpp  resource_exchange.hpp  tech_spread.cpp  tech_spread.hpp
src/io/: checkpoint.cpp  checkpoint.hpp  csv_writer.cpp  csv_writer.hpp  ic_loader.cpp  ic_loader.hpp
src/population/: carrying_capacity.cpp  carrying_capacity.hpp  mortality.cpp  mortality.hpp  plague.cpp  plague.hpp  reproduction.cpp  reproduction.hpp
src/river/: river_field.cpp  river_field.hpp
tests/: CMakeLists.txt  test_carrying_capacity.cpp  test_cell_list.cpp  test_checkpoint.cpp  test_climate_grid.cpp  test_config.cpp  test_culture.cpp  test_ic_loader.cpp  test_langevin_integrator.cpp  test_loyalty.cpp  test_morton.cpp  test_network.cpp  test_order_params.cpp  test_particle_data.cpp  test_perf_monitor.cpp  test_plague.cpp  test_polity.cpp  test_population.cpp  test_resource_exchange.cpp  test_river_field.cpp  test_social_force.cpp  test_tech_spread.cpp  test_terrain_loader.cpp
